--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native-reanimated": "^2.14.4",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.19.0",
+    "react-native-svg": "^13.7.0",
     "react-redux": "^8.0.5",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.2"
