--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/native": "^6.1.2",
     "@react-navigation/native-stack": "^6.9.8",
     "@testing-library/jest-native": "^5.4.1",
     "@testing-library/react-native": "^11.5.0",
     "native-base": "^3.4.25",
     "react": "18.2.0",
     "react-native": "0.71.0",
+    "react-native-check-box": "^2.1.7",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-reanimated": "^2.14.4",
     "react-native-safe-area-context": "^4.5.0",
@@ -24,6 +26,7 @@
     "react-native-svg": "^13.7.0",
     "react-redux": "^8.0.5",
     "redux-devtools-extension": "^2.13.9",
+    "redux-mock-store": "^1.5.4",
     "redux-thunk": "^2.4.2"
   },
   "devDependencies": {
@@ -44,6 +47,19 @@
     "typescript": "4.8.4"
   },
   "jest": {
-    "preset": "react-native"
+    "setupFiles": [
+      "./jestSetupFile.js"
+    ],
+    "preset": "react-native",
+    "transform": {
+      "^.+\\.[tj]sx?$": "babel-jest"
+    },
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "jsx"
+    ],
+    "coverageDirectory": "../../coverage/libs/react-b"
   }
 }
